manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: modernmta-dev
  name: ${CI_ENVIRONMENT_SLUG}-app
  labels:
    app.kubernetes.io/name: ${PROJECT_NAME}
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ${PROJECT_NAME}
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${PROJECT_NAME}
        app.kubernetes.io/component: app
        app.kubernetes.io/version: "GITHASH"
        app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
    spec:
      topologySpreadConstraints:
        - maxSkew: 3
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: ${PROJECT_NAME}
              app.kubernetes.io/component: app
              app.kubernetes.io/version: "GITHASH"
              app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
      enableServiceLinks: false
      containers:
        - name: nextjs
          image: ${CI_REGISTRY_IMAGE}:${IMAGE_TAG}
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - npx prisma migrate deploy;
              node server.js;
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.5"
            limits:
              memory: "1024Mi"
              cpu: "3"
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: modernmta-dev
  name: ${CI_ENVIRONMENT_SLUG}-postgres
  labels:
    app.kubernetes.io/name: ${PROJECT_NAME}
    app.kubernetes.io/component: postgres
    app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${PROJECT_NAME}
      app.kubernetes.io/component: postgres
      app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${PROJECT_NAME}
        app.kubernetes.io/component: postgres
        app.kubernetes.io/instance: ${CI_ENVIRONMENT_SLUG}
    spec:
      enableServiceLinks: false
      containers:
        - name: postgres
          image: postgres:14.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            requests:
              hugepages-2Mi: 256Mi
              memory: "1024Mi"
              cpu: "1"
            limits:
              hugepages-2Mi: 256Mi
              memory: "4096Mi"
              cpu: "4"
